# tesuto

./: .gitignore  CHANGELOG.md  CONFIGURATION.md  Cargo.toml  LICENSE  README.md  tesuto.yml
.github/workflows/: ci.yml  release.yml
src/: args.rs  main.rs  manager.rs  platform.rs  project.rs  runner.rs  term.rs
tesuto/: Cargo.toml
tesuto/src/: args.rs  main.rs  manager.rs  runner.rs  term.rs
tesuto_parser/: Cargo.toml
tesuto_project/: Cargo.toml
tesuto_project/src/: lib.rs
