[package]
name = "tesuto"
description = "Lightweight testing tool."
authors = ["Konstantin Zhigaylo <zero@kostyazero.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://git.kostyazero.com/kostya-zero/tesuto"
version = "0.2.0-rc1"
edition = "2021"

[dependencies]
clap = "4.5.1"
serde = { version = "1.0.196", features = ["derive"] }
serde_yaml = "0.9.31"
