[package]
name = "tesuto"
description = "Lightweight automation tool."
authors = ["Konstantin Zhigaylo <zero@kostyazero.com>"]
keywords = ["automation"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/kostya-zero/tesuto"
repository = "https://github.com/kostya-zero/tesuto"
version = "0.3.0-dev"
edition = "2021"

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
debug = false

[dependencies]
clap = "4.5.1"
dialoguer = "0.11.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_yaml = "0.9.31"
thiserror = "1.0.61"
