[package]
name = "tesuto"
description = "Lightweight testing tool."
authors = ["Konstantin Zhigaylo <kostya.zero@outlook.com>"]
readme = "../README.md"
license = "MIT"
homepage = "https://github.com/kostya-zero/tesuto"
version = "0.1.0"
edition = "2021"

[dependencies.tesuto_project]
path = "../tesuto_project"
version = "0.1.0"

[dependencies]
clap = "4.4.1"
serde = { version = "1.0.188", features = ["derive"] }
serde_yaml = "0.9.25"
