[package]
name = "tesuto_project"
description = "Project structure library for Tesuto."
authors = ["Konstantin Zhigaylo <kostya.zero@outlook.com>"]
license = "MIT"
readme = "../README.md"
homepage = "https://gitlab.com/kostya-zero/tesuto"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
serde_yaml = "0.9.25"
